Switch to a multi-row header.  This ensures that long user names won't adversely effect the presentation of the header (and won't be truncated).  It also consolidates authentication-related items in a single place instead of having them spread across the navigation bar.
application/layouts/site_auth.phtml
    Add to handle rendering of site authentication-related items.

application/layouts/header.phtml
    Use site_auth.pthml

    body-level scripting to allow hover menus to be clickable, primarily to
    support mobile browsers which don't handle hover well.

application/layouts/nav_menu.phtml
    Add '.menu-arrow' items to all top-level menus as a visual indicator that
    there is a drop down.

application/configs/navigation.xml
    Comment out authentication related navigation items.  They are now handled
    by application/layouts/site_auth.phtml

application/views/helpers/NavMenu.php
    Only add inbox and search information once.

public/css/tabs.scss
public/css/sizes.scss
public/css/main.scss
public/css/itemScope.scss
public/css/colors.scss
    MANY styling changes to adjust to a multi-line header with site
    authentication pulled out of the primary navigation bar.

public/css/connexions.css
public/css/connexions.min.css
    Re-pack.

--- a/public/css/itemScope.scss
+++ b/public/css/itemScope.scss
@@ -34,17 +34,21 @@ $itemCountWidth: $countBoxWidth + 10px;
     padding: 0.2em 0.1em 0.2em 0.25em;
     // Normal ui.input
     input {
-      margin: 0;
-      padding: 0.1em;
+      @include inlineBlock();
+      vertical-align: middle;
+      margin:         0;
+      padding:        0.1em;
     }
     button {
+      @include inlineBlock();
+      vertical-align:   middle;
       border:           0;
+
       color:            $navColor;
       background-color: $borderColor;
-      padding:          0.1em;
       margin:           0;
+      padding:          0 0.1em;
       cursor:           pointer;
-      float:            left;
       font-weight:      bold;
     }
     // jquery.autosuggest
